[package]
name = "aish"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
chrono = { version = "0.4.40" }
clap = { version = "4.5.31", features = ["derive"] }
home = { version = "0.5.11" }
indoc = { version = "2.0.6" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
